--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Loom Companion App</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div class="hamburger">&#9776;</div>
+        <div class="logo">
+          <a href="./index.html">Loom</a>
+        </div>
+        <div class="hero-banner"></div>
+      </nav>
+    </header>
+    <main>
+      <div class="button-section">
+        <button id="fears-btn">View Fears</button>
+        <button id="kids-btn">View Persons</button>
+        <button id="stuffies-btn">View Stuffed Animals</button>
+      </div>
+    </main>
+    <aside class="hamburger-menu">
+      <div class="close-btn">&times;</div>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#kids">Person</a></li>
+        <li><a href="#stuffies">Stuffed Animal</a></li>
+        <li><a href="#fears">Fear</a></li>
+      </ul>
+    </aside>
+  </body>
 </html>
