background and aside banner

--- a/client/index.html
+++ b/client/index.html
@@ -21,9 +21,9 @@
         <div class="logo">
           <a href="./index.html">Loom</a>
         </div>
-        <div class="hero-banner"></div>
       </nav>
     </header>
+    <div class="hero-banner-container"></div>
     <main>
       <div class="button-section">
         <button id="fears-btn">View Fears</button>
@@ -33,7 +33,7 @@
     </main>
     <aside class="hamburger-menu">
       <div class="close-btn">&times;</div>
-      <ul>
+      <ul class="link-list">
         <li><a href="#home">Home</a></li>
         <li><a href="#kids">Person</a></li>
         <li><a href="#stuffies">Stuffed Animal</a></li>
