--- a/client/index.html
+++ b/client/index.html
@@ -34,10 +34,10 @@
     <aside class="hamburger-menu">
       <div class="close-btn">&times;</div>
       <ul class="link-list">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#kids">Person</a></li>
-        <li><a href="#stuffies">Stuffed Animal</a></li>
-        <li><a href="#fears">Fear</a></li>
+        <li><a href="./index.html">Home</a></li>
+        <li><a href="./kids.html">Person</a></li>
+        <li><a href="./stuffies.html">Stuffed Animal</a></li>
+        <li><a href="./fears.html">Fear</a></li>
       </ul>
     </aside>
   </body>
