populate pages from API

--- a/client/index.html
+++ b/client/index.html
@@ -26,9 +26,15 @@
     <div class="hero-banner-container"></div>
     <main>
       <div class="button-section">
-        <button id="fears-btn">View Fears</button>
-        <button id="kids-btn">View Persons</button>
-        <button id="stuffies-btn">View Stuffed Animals</button>
+        <a href="fears.html">
+          <button id="fears-btn">View Fears</button>
+        </a>
+        <a href="kids.html">
+          <button id="kids-btn">View Persons</button>
+        </a>
+        <a href="stuffies.html">
+          <button id="stuffies-btn">View Stuffed Animals</button>
+        </a>
       </div>
     </main>
     <aside class="hamburger-menu">
