--- a/client/kids.html
+++ b/client/kids.html
@@ -26,7 +26,7 @@
     <main>
       <section>
         <h2>Person Section</h2>
-        <p>Details about kids (Persons).</p>
+        <div id="kids-list"></div>
       </section>
     </main>
     <aside class="hamburger-menu">
