--- a/client/stuffies.html
+++ b/client/stuffies.html
@@ -26,7 +26,7 @@
     <main>
       <section>
         <h2>Stuffed Animals Section</h2>
-        <p>Details about Stuffed Animals.</p>
+        <div id="stuffies-list"></div>
       </section>
     </main>
     <aside class="hamburger-menu">
