--- a/client/fears.html
+++ b/client/fears.html
@@ -26,7 +26,7 @@
     <main>
       <section>
         <h2>Fear Section</h2>
-        <p>Details about Fears.</p>
+        <div id="fears-list"></div>
       </section>
     </main>
     <aside class="hamburger-menu">
