arrange lists in 2 columns

--- a/client/fears.html
+++ b/client/fears.html
@@ -25,7 +25,7 @@
     </header>
     <main>
       <section>
-        <h2>Fear Section</h2>
+        <h2 id="section-title">Fear Section</h2>
         <div id="fears-list"></div>
       </section>
     </main>
