--- a/client/kids.html
+++ b/client/kids.html
@@ -25,7 +25,7 @@
     </header>
     <main>
       <section>
-        <h2>Person Section</h2>
+        <h2 id="section-title">Person Section</h2>
         <div id="kids-list"></div>
       </section>
     </main>
