--- a/client/stuffies.html
+++ b/client/stuffies.html
@@ -25,7 +25,7 @@
     </header>
     <main>
       <section>
-        <h2>Stuffed Animals Section</h2>
+        <h2 id="section-title">Stuffed Animals Section</h2>
         <div id="stuffies-list"></div>
       </section>
     </main>
