hero banner updates

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,13 @@
         </div>
       </nav>
     </header>
-    <div class="hero-banner-container"></div>
+    <div class="hero-banner-container">
+      <h1 class="hero-header">Welcome to Loom</h1>
+      <p class="hero-instructions">
+        Use this database to pair Person with Protector, to find your guardian
+        or learn about the fears that lurk in the dark.
+      </p>
+    </div>
     <main>
       <div class="button-section">
         <a href="fears.html">
