--- a/client/addStuffy.html
+++ b/client/addStuffy.html
@@ -35,7 +35,7 @@
             <textarea id="desc" name="desc" required></textarea>
           </div>
           <div class="form-group">
-            <label for="role">Role (Protector/Guardian):</label>
+            <label for="role">Role:</label>
             <input type="text" id="role" name="role" required />
           </div>
           <div class="form-group">
