--- a/client/fears.html
+++ b/client/fears.html
@@ -27,6 +27,9 @@
       <section>
         <h2 id="section-title">Fear Section</h2>
         <div id="fears-list"></div>
+        <a href="addFear.html">
+          <button id="add-fear-btn">Add New Fear</button>
+        </a>
       </section>
     </main>
     <aside class="hamburger-menu">
