--- a/client/kids.html
+++ b/client/kids.html
@@ -27,6 +27,9 @@
       <section>
         <h2 id="section-title">Person Section</h2>
         <div id="kids-list"></div>
+        <a href="addKid.html">
+          <button id="add-kid-btn">Add New Kid</button>
+        </a>
       </section>
     </main>
     <aside class="hamburger-menu">
