--- a/client/stuffies.html
+++ b/client/stuffies.html
@@ -27,6 +27,9 @@
       <section>
         <h2 id="section-title">Stuffed Animals Section</h2>
         <div id="stuffies-list"></div>
+        <a href="addStuffy.html">
+          <button id="add-stuffy-btn">Add New Stuffy</button>
+        </a>
       </section>
     </main>
     <aside class="hamburger-menu">
