--- a/client/editStuffy.html
+++ b/client/editStuffy.html
@@ -49,7 +49,7 @@
           </div>
           <div class="form-group">
             <label for="person">Person</label>
-            <input type="text" id="person" name="person" />
+            <select id="person" name="person"></select>
           </div>
           <button type="submit">Update Stuffy</button>
         </form>
