minor aesthetic changes

--- a/client/editFear.html
+++ b/client/editFear.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script defer src="script.js"></script>
-    <title>Edit Fear - Loom Companion App</title>
+    <title>Edit Fear</title>
   </head>
   <body>
     <header>
@@ -26,9 +26,7 @@
 
     <div class="hero-banner-container">
       <h2 class="hero-header">Edit a Fear's Information</h2>
-      <p class="hero-instructions">
-        You can modify the fear's details, including severity and frequency.
-      </p>
+      <p class="hero-instructions">You can modify the fear's details.</p>
     </div>
 
     <main>
