--- a/client/editKid.html
+++ b/client/editKid.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script defer src="script.js"></script>
-    <title>Edit Kid - Loom Companion App</title>
+    <title>Edit Kid</title>
   </head>
   <body>
     <header>
@@ -22,7 +28,7 @@
       <h2 class="hero-header">Edit Kid's Information</h2>
       <p class="hero-instructions">
         Modify all the kid's details, including their fears, sleep quality, and
-        favorite stuffy.
+        favorite stuffed animal.
       </p>
     </div>
 
