--- a/client/editStuffy.html
+++ b/client/editStuffy.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script defer src="script.js"></script>
-    <title>Edit Stuffy - Loom Companion App</title>
+    <title>Edit Stuffy</title>
   </head>
   <body>
     <header>
