--- a/client/stuffyDetail.html
+++ b/client/stuffyDetail.html
@@ -25,6 +25,7 @@
     </header>
     <main>
       <div id="stuffy-detail"></div>
+      <button id="delete-stuffy-btn" class="delete-btn">Delete</button>
     </main>
     <aside class="hamburger-menu">
       <div class="close-btn">&times;</div>
