added a link to stuffyFinder.html

--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,9 @@
         <a href="stuffies.html">
           <button id="stuffies-btn">View Stuffed Animals</button>
         </a>
+        <a href="stuffyFinder.html">
+          <button id="stuffy-finder-btn">Make a Stuffed Animal</button>
+        </a>
       </div>
     </main>
     <aside class="hamburger-menu">
