updated front page description

--- a/client/index.html
+++ b/client/index.html
@@ -26,8 +26,8 @@
     <div class="hero-banner-container">
       <h1 class="hero-header">Welcome to Loom</h1>
       <p class="hero-instructions">
-        Use this database to pair Person with Protector, to find your guardian
-        or learn about the fears that lurk in the dark.
+        Register Persons, Stuffed Animals or Fears, then match yourself to your
+        personalized stuffed animal!
       </p>
     </div>
     <main>
@@ -42,7 +42,7 @@
           <button id="stuffies-btn">View Stuffed Animals</button>
         </a>
         <a href="stuffyFinder.html">
-          <button id="stuffy-finder-btn">Make a Stuffed Animal</button>
+          <button id="stuffy-finder-btn">Match to a Stuffed Animal</button>
         </a>
       </div>
     </main>
