prep for deployment

--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap" rel="stylesheet" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="style.css" />
@@ -25,10 +22,7 @@
     </header>
     <div class="hero-banner-container">
       <h1 class="hero-header">Welcome to Loom</h1>
-      <p class="hero-instructions">
-        Register Persons, Stuffed Animals or Fears, then match yourself to your
-        personalized stuffed animal!
-      </p>
+      <p class="hero-instructions">Register Persons, Stuffed Animals or Fears, then match yourself to your personalized stuffed animal!</p>
     </div>
     <main>
       <div class="button-section">
